--- a/configs/config_FPN_resnet_18_256x256.yaml
+++ b/configs/config_FPN_resnet_18_256x256.yaml
@@ -47,6 +47,12 @@ callbacks:
     mode: max
     save_top_k: -1
 
+trainer:
+  type: pytorch_lightning.Trainer
+  max_epochs: 20
+  precision: 32
+  #resume_from_checkpoint: lightning_logs/version_5/checkpoints/epoch=20-step=3540.ckpt
+
 model:
   type: segmentation_models_pytorch.FPN
   encoder_name: resnet18
@@ -56,6 +62,5 @@ model:
   classes: 1
 
 params:
-  epochs: 20
   batch_size: 16
   image_size: 256
