--- a/requirements.txt
+++ b/requirements.txt
@@ -73,7 +73,6 @@ threadpoolctl==3.1.0
 tifffile==2023.4.12
 timm==0.9.2
 toolz==0.12.0
-torch==2.0.0
 torchmetrics==0.11.4
 torchvision==0.15.0
 tqdm==4.65.0
@@ -84,3 +83,5 @@ wandb==0.15.4
 webencodings==0.5.1
 websockets==11.0.3
 yarl==1.9.2
+torch==2.0.0+cu117
+torchvision==0.15.1+cu117
